--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<meta charset="utf-8">
 	<title>Ben's Place</title>
 	<meta name="monetization" content="$ilp.uphold.com/MmrdQJQiKgNX">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -14,14 +14,9 @@
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
- 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
-	<style>
-body {
-	padding-top: 50px;
-	padding-bottom: 50px;
-}
-	</style>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -29,19 +24,19 @@ body {
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-         <span class="sr-only">Toggle navigation</span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-      </button>
-      <span class="navbar-brand" href="#">Ben's Place</span>
+				 <span class="sr-only">Toggle navigation</span>
+				 <span class="icon-bar"></span>
+				 <span class="icon-bar"></span>
+				 <span class="icon-bar"></span>
+			</button>
+			<span class="navbar-brand" href="#">Ben's Place</span>
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
 				<li><a href="https://www.hardill.me.uk/">Home</a></li>
 				<li><a href="https://www.hardill.me.uk/wordpress">Blog</a></li>
 				<li><a href="https://www.flickr.com/photos/hardillb/">Photos</a></li>
-        <li><a href="https://www.hardill.me.uk/wordpress/about/">About</a></li>
+				<li><a href="https://www.hardill.me.uk/wordpress/about/">About</a></li>
 			</ul>
 		</div>
 	</div>
