--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
+	<script src="/js/paho-mqtt.js"></script>
+
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -56,4 +58,34 @@
 </div>
 </body>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script type="text/javascript">
+	var clientid = "web_"+ parseInt(Math.random() * 100, 10);
+	var client = new Paho.MQTT.Client(location.hostname, Number(location.port), clientid);
+
+	client.onConnectionLost = (responseObject) => {
+		console.log("MQTT connection lost")
+	}
+
+	client.onMessageArrived = (message) => {
+		console.log(message);
+	}
+
+	var onConnect = () => {
+		client.subscribe('#')
+	}
+
+	var options = {
+		onSuccess: onConnect,
+		cleanSession: true,
+		keepAlive: 20,
+		timeout: 10,
+		reconnect: true
+	}
+
+	if (location.protocol == "https") {
+		options.useSSL = true
+	}
+
+	client.connect(options);
+</script>
 </html>
