--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script type="text/javascript">
 	var clientid = "web_"+ parseInt(Math.random() * 100, 10);
-	var client = new Paho.MQTT.Client(location.hostname, Number(location.port), clientid);
+	var client = new Paho.Client(location.hostname, Number(location.port), clientid);
 
 	client.onConnectionLost = (responseObject) => {
 		console.log("MQTT connection lost")
