--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	var options = {
 		onSuccess: onConnect,
 		cleanSession: true,
-		keepAlive: 20,
+		keepAliveInterval: 20,
 		timeout: 10,
 		reconnect: true
 	}
