Fix typo in protocol test

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		reconnect: true
 	}
 
-	if (location.protocol == "https") {
+	if (location.protocol == "https:") {
 		options.useSSL = true
 	}
 
