--- a/index.html
+++ b/index.html
@@ -60,19 +60,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script type="text/javascript">
 	var clientid = "web_"+ parseInt(Math.random() * 100, 10);
-	var client = new Paho.Client(location.hostname, Number(location.port), clientid);
-
-	client.onConnectionLost = (responseObject) => {
-		console.log("MQTT connection lost")
-	}
-
-	client.onMessageArrived = (message) => {
-		console.log(message);
-	}
-
-	var onConnect = () => {
-		client.subscribe('#')
-	}
+	var port = 80;
 
 	var options = {
 		onSuccess: onConnect,
@@ -84,6 +72,25 @@
 
 	if (location.protocol == "https:") {
 		options.useSSL = true
+		if (location.port) {
+			port = Number(location.port)
+		} else {
+			port = 443;
+		}
+	}
+
+	var client = new Paho.Client(location.hostname, port, clientid);
+
+	client.onConnectionLost = (responseObject) => {
+		console.log("MQTT connection lost")
+	}
+
+	client.onMessageArrived = (message) => {
+		console.log(message);
+	}
+
+	var onConnect = () => {
+		client.subscribe('#')
 	}
 
 	client.connect(options);
