Add Mastodon link

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<li><a href="https://www.flickr.com/photos/hardillb/">Photos</a></li>
 		<li><a href="https://www.strava.com/athletes/1008322">Sport</a></li>
 		<li><a href="https://github.com/hardillb">Code</a></li>
+		<li><a href="https://bluetoot.hardill.me.uk/@ben">Mastodon</a></li>
 		<li><a href="https://twitter.com/hardillb">Twitter</a> - Searchable local <a href="https://www.hardill.me.uk/tweets/">archive</a></li>
 		<li><a href="https://www.hardill.me.uk/wordpress/about/curriculum-vitae/">C.V.</a></li>
 	</ul>
