--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
 		<li><a href="https://www.strava.com/athletes/1008322">Sport</a></li>
 		<li><a href="https://github.com/hardillb">Code</a></li>
 		<li><a href="https://bluetoot.hardill.me.uk/@ben">Mastodon</a></li>
-		<li><a href="https://twitter.com/hardillb">Twitter</a> - Searchable local <a href="https://www.hardill.me.uk/tweets/">archive</a></li>
+		<li>
+			<a href="https://twitter.com/hardillb">Twitter</a>
+			<ul>
+				<li>Searchable local <a href="https://www.hardill.me.uk/tweets/">archive</a></li>
+				<li>Tweetback local <a href="https://www.hardill.me.uk/tweetback">archive</a></li>
+			</ul>
+		</li>
 		<li><a href="https://www.hardill.me.uk/wordpress/about/curriculum-vitae/">C.V.</a></li>
 	</ul>
 	<div>
