Update blog link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="container main">
 	<p>Just a spot where I can host some stuff and make notes about things I'm playing with.</p>
 	<ul>
-		<li><a href="https://www.hardill.me.uk/wordpress">Blog</a></li>
+		<li><a href="https://blog.hardill.me.uk/">Blog</a></li>
 		<li><a href="https://www.flickr.com/photos/hardillb/">Photos</a></li>
 		<li><a href="https://www.strava.com/athletes/1008322">Sport</a></li>
 		<li><a href="https://github.com/hardillb">Code</a></li>
