--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
 				<li><a href="https://www.hardill.me.uk/">Home</a></li>
-				<li><a href="https://www.hardill.me.uk/wordpress">Blog</a></li>
+				<li><a href="https://blog.hardill.me.uk/">Blog</a></li>
 				<li><a href="https://www.flickr.com/photos/hardillb/">Photos</a></li>
 				<li><a href="https://www.hardill.me.uk/wordpress/about/">About</a></li>
 			</ul>
