Fix the last blog link...

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<li><a href="https://www.hardill.me.uk/">Home</a></li>
 				<li><a href="https://blog.hardill.me.uk/">Blog</a></li>
 				<li><a href="https://www.flickr.com/photos/hardillb/">Photos</a></li>
-				<li><a href="https://www.hardill.me.uk/wordpress/about/">About</a></li>
+				<li><a href="https://blog.hardill.me.uk/about/">About</a></li>
 			</ul>
 		</div>
 	</div>
