Add OpenGraph header
add fediverse.creator tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<meta charset="utf-8">
 	<title>Ben's Place</title>
 	<meta name="monetization" content="$ilp.uphold.com/MmrdQJQiKgNX">
+	<meta name="fediverse:creator" content="@ben@hardill.me.uk" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
