--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 	<title>Ben's Place</title>
 	<meta name="monetization" content="$ilp.uphold.com/MmrdQJQiKgNX">
-	<meta name="fediverse:creator" content="@ben@hardill.me.uk" />
+	<meta name="fediverse:creator" property="fediverse:creator" content="@ben@hardill.me.uk" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -60,7 +60,7 @@
 				<li>Tweetback local <a href="https://www.hardill.me.uk/tweetback">archive</a></li>
 			</ul>
 		</li>
-		<li><a href="https://www.hardill.me.uk/wordpress/about/curriculum-vitae/">C.V.</a></li>
+		<li><a href="https://blog.hardill.me.uk/about/curriculum-vitae/">C.V.</a></li>
 	</ul>
 	<div>
 		<p>Current temperature <span id="temp"></span>&deg;C and humidity <span id="humidity"></span>%</p>
