--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<li><a href="https://www.flickr.com/photos/hardillb/">Photos</a></li>
 		<li><a href="https://www.strava.com/athletes/1008322">Sport</a></li>
 		<li><a href="https://github.com/hardillb">Code</a></li>
-		<li><a href="https://bluetoot.hardill.me.uk/@ben">Mastodon</a></li>
+		<li><a rel="me" href="https://bluetoot.hardill.me.uk/@ben">Mastodon</a></li>
 		<li>
 			<a href="https://twitter.com/hardillb">Twitter</a>
 			<ul>
