--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<li><a href="https://github.com/hardillb">Code</a></li>
 		<li><a rel="me" href="https://bluetoot.hardill.me.uk/@ben">Mastodon</a></li>
 		<li>
-			<a href="https://twitter.com/hardillb">Twitter</a>
+			Twitter Archives
 			<ul>
 				<li>Searchable local <a href="https://www.hardill.me.uk/tweets/">archive</a></li>
 				<li>Tweetback local <a href="https://www.hardill.me.uk/tweetback">archive</a></li>
