Add canonical header

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<script src="/js/paho-mqtt.js"></script>
 
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="canonical" hred="https://www.hardill.me.uk">
 </head>
 <body>
 
